fix: hero scrollbar on mobile

--- a/style/hero.scss
+++ b/style/hero.scss
@@ -11,7 +11,9 @@
     }
     &__image {
         margin-left: 3px;
-        width: 85%;
+        width: 99%;
+        object-fit: cover;
+        height: 100%;
     }
     &__main {
         display: flex;
@@ -26,11 +28,11 @@
                 overflow-y: hidden;
             }
             .swiper-scrollbar {
-                width: 50%;
+                width: 65%;
                 position: absolute;
-                bottom: 25px;
+                bottom: 20px;
                 left: 50%;
-                transform: translateX(-50%);
+                transform: translateX(-40%);
             }
             .swiper-button-prev,
             .swiper-button-next {
@@ -42,7 +44,7 @@
                 left: 68px;
             }
             .swiper-button-next {
-                right: 83px;
+                right: 0;
             }
         }
         .description {
@@ -51,7 +53,6 @@
             justify-content: flex-end;
             height: 285px;
             width: 100%;
-            transform: translateX(-11%);
             &__title {
                 margin-bottom: 40px;
                 font-family: sans-serif; 
@@ -134,7 +135,7 @@
             letter-spacing: 1px;
         }
         &__image {
-            max-width: 270px;
+            max-height: 80%;
         }
         &__main {
             max-width: 665px;
@@ -142,6 +143,10 @@
                 height: 235px;
                 .swiper-slide {
                     height: 100%;
+                }
+                .swiper-button-next,
+                .swiper-button-prev {
+                    width: 20px;
                 }
                 .swiper-button-next {
                     right: 46px;
@@ -224,11 +229,18 @@
                     height: 100%;
                 }
                 .swiper-scrollbar {
-                    width: 50%;
+                    width: 70%;
                     left: var(--image-center-offset, 0px);
+                    bottom: 20px;
+                    transform: translateX(-48%);
+                }
+                .swiper-button-next,
+                .swiper-button-prev {
+                    width: 25px;
+                    // bottom: 
                 }
                 .swiper-button-next {
-                    left: var(--image-right-offset, 330px);
+                    right: -5px;
                 }
                 .swiper-button-prev {
                     left: 0;
@@ -295,13 +307,19 @@
                     height: unset;
                 }
                 .swiper-scrollbar {
-                    width: 80%;
+                    width: 65%;
+                    bottom: 50px
+                }
+                .swiper-button-next,
+                .swiper-button-prev {
+                    bottom: 27px;
+                    width: 40px;
                 }
                 .swiper-button-next {
-                    right: 0;
+                    right: -10px;
                 }
                 .swiper-button-prev {
-                    left: 0;
+                    left: 100px;
                 }
             }
             .description {
